<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/almostBlack"
    tools:ignore="HardcodedText"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/workingsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/resultsTV"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/buttonAC"
            style="@style/buttonNumber"
            android:textColor="#000000"
            android:background="#818180"
            android:onClick="allClearAction"
            android:text="AC"/>
        <Button
            android:id="@+id/buttondel"
            style="@style/buttonNumber"
            android:textColor="@color/black"
            android:background="#818180"
            android:onClick="backSpaceAction"
            android:text="⌫"/>
        <Button
            style="@style/buttonNumber"
            android:background="#818180"
            android:text="" />
        <Button
            android:id="@+id/buttondev"
            style="@style/buttonOperator"
            android:background="#FF8600"
            android:textColor="@color/white"
            android:text="/"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/button7"
            style="@style/buttonNumber"
            android:text="7"/>
        <Button
            android:id="@+id/button8"
            style="@style/buttonNumber"
            android:text="8"/>
        <Button
            android:id="@+id/button9"
            style="@style/buttonNumber"
            android:text="9" />
        <Button
            android:id="@+id/buttonmult"
            style="@style/buttonOperator"
            android:background="#FF8600"
            android:textColor="@color/white"
            android:text="x"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/button4"
            style="@style/buttonNumber"
            android:text="4"/>
        <Button
            android:id="@+id/button5"
            style="@style/buttonNumber"
            android:text="5"/>
        <Button
            android:id="@+id/button6"
            style="@style/buttonNumber"
            android:text="6" />
        <Button
            android:id="@+id/buttonminus"
            style="@style/buttonOperator"
            android:background="#FF8600"
            android:textColor="@color/white"
            android:text="-"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/button1"
            style="@style/buttonNumber"
            android:text="1"/>
        <Button
            android:id="@+id/button2"
            style="@style/buttonNumber"
            android:text="2"/>
        <Button
            android:id="@+id/button3"
            style="@style/buttonNumber"
            android:text="3" />
        <Button
            android:id="@+id/buttonplus"
            style="@style/buttonOperator"
            android:background="#FF8600"
            android:textColor="@color/white"
            android:text="+"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/button0"
            style="@style/buttonNumber"
            android:text="0"/>
        <Button
            android:id="@+id/button."
            android:layout_weight="2"
            style="@style/buttonNumber"
            android:text="."/>
        <Button
            android:id="@+id/bequal"
            style="@style/buttonNumber"
            android:background="@color/orange"
            android:textSize="40sp"
            android:onClick="equalsAction"
            android:text="=" />

    </LinearLayout>



</LinearLayout>